文章管理完成

--- a/article/art_list.html
+++ b/article/art_list.html
@@ -52,6 +52,7 @@
                 <tbody></tbody>
             </table>
             <!-- 分页栏 -->
+            <div id="pageBox"></div>
         </div>
     </div>
 
